# mf-pgvector

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: chem-feature.py  molecules.csv
