[tool.poetry]
name = "mf-pgvector"
version = "0.1.0"
description = ""
authors = ["Marco Falcioni <marco@octant.bio>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pgvector = "^0.3.2"
loguru = "^0.7.2"
rdkit = "^2024.3.3"
datamol = "^0.12.5"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
